# opengl-playground

./: .clang-tidy  .gitignore  CLAUDE.md  LICENSE  README.md  meson.build
assets/: meson.build
fonts/: meson.build
lib/stb_image/: stb_image.h
shaders/: bright_font.frag  font.frag  font.fs  font.vert  font.vs  light.frag  light.vert  light_font.frag  light_incl.frag  light_src.frag  meson.build  shader1.frag  shader1.fs  shader1.vs
src/: application.cpp  application.h  camera.cpp  camera.h  circular_motion_component.cpp  circular_motion_component.h  component.h  directional_light_component.h  exceptions.h  font_atlas.cpp  font_atlas.h  game_object.cpp  game_object.h  light_component.h  light_source.cpp  light_source.h  logger.cpp  logger.h  main.cpp  main2.cpp  material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  point_light_component.h  rainbow_component.cpp  rainbow_component.h  resource_manager.cpp  resource_manager.h  rotation_component.cpp  rotation_component.h  scene.cpp  scene.h  shader.cpp  shader.h  spotlight_component.h  text.cpp  text.h  (+13 more)
